resources/rancher-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher
  labels:
    name: rancher
  namespace: cattle-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - "rancher.kub3.dev"
    secretName: rancher-letsencrypt-cert
  rules:
  - host: rancher.kub3.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: rancher-server
            port: 
              name: https
